--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 node_modules/
 *.swp
 .lock-wscript
-# lib/
+lib/
 Makefile.gyp
 *.Makefile
 *.target.gyp.mk
@@ -22,5 +22,5 @@ coverage/
 .nyc_output/
 
 # Keep bundled code out of Git
-dist/
+# dist/
 demo/dist/
